cmake_minimum_required(VERSION 3.27)
project(4)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(4
        addpntrs.cpp
        address.cpp
        arraynew.cpp
        arrstruc.cpp
        assgn_st.cpp
        choices.cpp
        delete.cpp
        gui.cpp
        instr1.cpp
        instr2.cpp
        instr3.cpp
        mixtypes.cpp
        newstruct.cpp
        numstr.cpp
        pointer.cpp
        ptrstr.cpp
        stings.cpp
        strtyoe1.cpp
        strtyoe2.cpp
        strtyoe3.cpp
        strtype4.cpp
        structur.cpp
        use_new.cpp)
